# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v0.23.0 (2021-05-18)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix number of instances *int32 type in describe commands
| https://github.com/knative/client/pull/1312[#1312]

| 🐛
| Use fully qualified test images
| https://github.com/knative/client/pull/1307[#1307]

| 🐣
| Fix for serviceaccounts "default" not found flaky issue
| https://github.com/knative/client/pull/1306[#1306]

| ✨
| Update Eventing Sources `APIServerSource, ContainerSource, SinkBinding` API to v1
| https://github.com/knative/client/pull/1299[#1299]

| ✨
| Update Eventing Source `PingSource` API to v1beta2
| https://github.com/knative/client/pull/1299[#1299]

| 🐛
| Fix documentation of the configuration options
| https://github.com/knative/client/pull/1297[#1297]

| ✨
| Drop --strict flag on ko
| https://github.com/knative/client/pull/1295[#1295]

| 🎁
| Add number of instances to describe command
| https://github.com/knative/client/pull/1289[#1289]

| 🐛
| Respect `-o` in `list` commands in case if no data present
| https://github.com/knative/client/pull/1276[#1276]
|===

## v0.22.0 (2021-04-06)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `context.Context` parameter to API functions
| https://github.com/knative/client/pull/1274[#1274]

| 🎁
| Add `kn domain` CRUD commands to manage domain mappings
| https://github.com/knative/client/pull/1267[#1267]

| ✨
| Add support for namespaces for all commands that takes a `--sink` option
| https://github.com/knative/client/pull/1264[#1264]

| 🐛
| Fix memory leak on closed watch channel